# auv_control

./: CMakeLists.txt  README.md  package.xml  ros2.repos
include/auv_control/: butterworth.h  cascaded_pid.h  controller_gains.h  controller_io.h  eigen_typedefs.h  hydrodynamics.h  multi_cascaded_pid.h  pos_vel_pid.h  service_sync.h
launch/: pose_launch.py  pose_setpoint.yaml  vel_setpoint.yaml  wrench.yaml  wrench_launch.py
src/: body_pid.cpp  body_sm.cpp  cascaded_pid.cpp  controller_io.cpp  controller_io.cpp.autosave  hydrodynamics.cpp  model_parser.h  multi_cascaded_pid.cpp  pos_vel_pid.cpp  sliding_mode.cpp
srv/: Control.srv
